tests/marouter/errors/incomplete_connections/both_missing2of2/errors.marouter
Error: District '2' has no sink.
Error: District '2' has no source.
Error: No valid vehicles loaded.
Quitting (on error).
